# StorySuna2023

./: .gitignore  CMakeLists.txt  README.md  UseLATEX.cmake  UseLATEX_OLD_cmake  abbrvnatrussian.bst  abbrvnatrussian_good.bst  abbrvnatrussian_old_bst  abbrvnatrussian_без_переноса.bst  abbrvnatrussian_перенос.bst  annotation.tex  annotation_old.tex  bibliography.bib  build.sh  build_pdfx.sh  build_screen.sh  build_test_pics.sh  clear_build_pdfx_dir.sh  clear_build_screen_dir.sh  clear_build_test_pics_dir.sh  coordinates.tex  coordsvalues.tex  epilog.tex  lastpage.tex  main.aux  main.bbl  main.blg  main.tex  main.toc  main.xmpdata  main_x1a.tex  main_x1a.xmpdata  prolog.tex  test.tex  test_pics.tex  test_pics_main.tex  texstudioprofile  thankyou.tex  titlepage.tex  typograph.tex  (+2 more)
cover/: текст на обложке
pictures/linographs_new/GGC-Genshtab(Nakarte.me)/nakarte_ggc_1km.zmp/: params.txt
pictures/linographs_new/GGC-Genshtab(Nakarte.me)/nakarte_ggc_250.zmp/: params.txt
pictures/linographs_new/GGC-Genshtab(Nakarte.me)/nakarte_ggc_2km.zmp/: params.txt
pictures/linographs_new/GGC-Genshtab(Nakarte.me)/nakarte_ggc_500.zmp/: params.txt
pictures/linographs_new/GGC-Genshtab(Nakarte.me)/nakarte_ggc_multi.zmp/: GetUrlScript.txt  params.txt
pictures/linographs_new/GGC-Genshtab(Nakarte.me)/topo_marshruty.zmp/: params.txt  (+3 more)
суна2023/: антарктида.tex  в_платье_белом.tex  венеция.tex  вмордувинд.tex  выброска.tex  заброска.tex  лавалампи.tex  ладога.tex  линдозеро.tex  мярандукса.tex  нурмис.tex  паджерик.tex  пивотека.tex  платье.tex  пороги.tex  тест.tex  тест2.tex  черанга.tex
(+6 files in other folders)
